# poetry-pybind11-integration

./: .gitignore  Dockerfile  README.md  build.py  example.py  pyproject.toml
poetry_pybind11_integration/: __init__.py  __init__.pyi
src/: animal.h  collatz.h  decorators.cpp  fibonacci.cpp  fibonacci.h  managed_resource.h  module.cpp  primes.cpp  primes.h
tests/: test_animal.py  test_collatz.py  test_context_manager.py  test_decorator.py  test_fibonacci.py  test_init_subclass.py  test_poetry_pybind11_integration.py  test_primes.py
