[tool.poetry]
name = "poetry-pybind11-integration"
version = "0.1.1"
description = "Example C++ python module packaged for poetry"
authors = []
include = ["src"]

[tool.poetry.dependencies]
python = "^3.8"
pybind11 = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

