[tool.poetry]
name = "poetry-pybind11-integration"
version = "0.3.1"
description = "Example C++ python module packaged for poetry"
authors = ["Andrew Smith"]
homepage = "https://github.com/virgesmith/poetry-pybind11-integration"
include = [
    {path = "src", format = "sdist"}
]

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pybind11 = "^2.8.0"

[tool.poetry.build]
script = "build.py"

[build-system]
# setuptools and pybind11 are required for the sdist package (but not the binary wheel)
requires = ["poetry-core>=1.0.0", "setuptools", "pybind11"]
build-backend = "poetry.core.masonry.api"

